Add hide-on-mobile utility class

--- a/internal/assets/static/main.css
+++ b/internal/assets/static/main.css
@@ -995,7 +995,7 @@ body {
         flex-flow: row-reverse;
     }
 
-    svg.forum-post-list-thumbnail {
+    .hide-on-mobile {
         display: none
     }
 }
