--- a/internal/assets/templates/change-detection.html
+++ b/internal/assets/templates/change-detection.html
@@ -12,7 +12,7 @@
     {{ end }}
 </ul>
 {{ else }}
-<ul class="dynamic-columns">
+<ul class="dynamic-columns collapsible-container" data-collapse-after="{{ .CollapseAfter }}">
   {{ range .ChangeDetections }}
   <li class="flex flex-column gap-5">
     {{ template "change-detection" . }}
