--- a/internal/assets/static/main.css
+++ b/internal/assets/static/main.css
@@ -468,33 +468,39 @@ kbd:active {
     border-left: none;
 }
 
+.dynamic-columns:has(> :nth-child(1)) { --columns-per-row: 1; }
+.dynamic-columns:has(> :nth-child(2)) { --columns-per-row: 2; }
+.dynamic-columns:has(> :nth-child(3)) { --columns-per-row: 3; }
+.dynamic-columns:has(> :nth-child(4)) { --columns-per-row: 4; }
+.dynamic-columns:has(> :nth-child(5)) { --columns-per-row: 5; }
+
 @container widget (max-width: 449px) {
-    .dynamic-columns { --columns-per-row: 1; }
+    .dynamic-columns:has(> :nth-child(1)) { --columns-per-row: 1; }
     .dynamic-columns > * {
         border-left: none;
         padding-bottom: calc(var(--widget-content-vertical-padding) / -2);
     }
 }
 @container widget (min-width: 450px) and (max-width: 850px) {
-    .dynamic-columns { --columns-per-row: 2; }
+    .dynamic-columns:has(> :nth-child(2)) { --columns-per-row: 2; }
     .dynamic-columns > * { border-top: none; }
     .dynamic-columns > :nth-child(-n+2) { border-top: none; }
     .dynamic-columns > :nth-child(2n-1) { border-left: none; }
 }
 @container widget (min-width: 849px) and (max-width: 1250px) {
-    .dynamic-columns { --columns-per-row: 3; }
+    .dynamic-columns:has(> :nth-child(3)) { --columns-per-row: 3; }
     .dynamic-columns > * { border-top: none; }
     .dynamic-columns > :nth-child(-n+3) { border-top: none; }
     .dynamic-columns > :nth-child(3n+1) { border-left: none; }
 }
 @container widget (min-width: 1249px) and (max-width: 1499px) {
-    .dynamic-columns { --columns-per-row: 4; }
+    .dynamic-columns:has(> :nth-child(4)) { --columns-per-row: 4; }
     .dynamic-columns > * { border-top: none; }
     .dynamic-columns > :nth-child(-n+4) { border-top: none; }
     .dynamic-columns > :nth-child(4n+1) { border-left: none; }
 }
 @container widget (min-width: 1500px) {
-    .dynamic-columns { --columns-per-row: 5; }
+    .dynamic-columns:has(> :nth-child(5)) { --columns-per-row: 5; }
     .dynamic-columns > * { border-top: none; }
     .dynamic-columns > :nth-child(-n+5) { border-top: none; }
     .dynamic-columns > :nth-child(5n+1) { border-left: none; }
