--- a/internal/assets/templates/heading.html
+++ b/internal/assets/templates/heading.html
@@ -7,8 +7,15 @@
 {{ end }}
 
 {{ define "widget-content" }}
-	<h{{ .Size }} class="size-h{{ .Size }} uppercase widget-header">{{ .Text }}</h{{ .Size }}>
-	{{ if .Separator }}
-		<div class="heading-dotted-line"></div>
-	{{ end }}
+    <div class="flex items-center gap-10">
+        {{ if ne "" .Icon }}
+        <div class="heading-icon-container">
+            <img class="heading-icon{{ if .IsSimpleIcon }} simple-icon{{ end }}" src="{{ .Icon }}" alt="" loading="lazy">
+        </div>
+        {{ end }}
+        <h{{ .Size }} class="size-h{{ .Size }} heading-text">{{ .Text }}</h{{ .Size }}>
+    </div>
+    {{ if .Separator }}
+        <div class="heading-dotted-line"></div>
+    {{ end }}
 {{ end }}
