--- a/internal/assets/templates/calendar.html
+++ b/internal/assets/templates/calendar.html
@@ -1,6 +1,6 @@
 {{ template "widget-base.html" . }}
 
-{{ define "widget-content" }} {{ define "widget-content" }}
+{{ define "widget-content" }}
 <div class="widget-small-content-bounds">
     <div class="flex justify-between items-center">
         <div class="color-highlight size-h1">{{ .Calendar.CurrentMonthName }}</div>
@@ -20,15 +20,17 @@
         <div class="calendar-day">Su</div>
     </div>
 
-<div class="flex flex-wrap justify-center items-center">
-	{{ range .Calendar.Days }}
-	<div class="calendar-day{{ if eq .Day $.Calendar.CurrentDay }} calendar-day-today{{ end }} {{ if .IsEvent}} calendar-isevent{{ end }}">
-	{{ if .IsEvent}}
-		<div class="tooltip">
-			<span class="tooltiptext">{{ .Event.EventHover }}</span>
-		</div>
-	{{ end }}
-	<span>{{ .Day }}</span>
+	<div class="flex flex-wrap justify-center items-center">
+		{{ range .Calendar.Days }}
+		<div class="calendar-day{{ if eq .Day $.Calendar.CurrentDay }} calendar-day-today{{ end }} {{ if .IsEvent}} calendar-isevent{{ end }}">
+		{{ if .IsEvent}}
+			<div class="tooltip">
+				<span class="tooltiptext">{{ .Event.EventHover }}</span>
+			</div>
+		{{ end }}
+		<span>{{ .Day }}</span>
 	</div>
+	{{ end }}
+    </div>
 </div>
 {{ end }}
