--- a/internal/glance/static/main.css
+++ b/internal/glance/static/main.css
@@ -1797,6 +1797,47 @@ details[open] .summary::after {
     background: linear-gradient(0deg, var(--color-widget-background) 10%, transparent);
 }
 
+.tautulli-user {
+	margin-bottom: 1.5rem;
+
+	&:last-child{
+		margin-bottom: 0;
+	}
+}
+
+.tautulli-separator {
+	margin: 0.5rem 0;
+}
+
+.tautulli-sessions li {
+	margin-bottom: 1rem;
+
+	&:last-child{
+		margin-bottom: 0;
+	}
+}
+
+.tautulli-progress {
+	display: flex;
+	align-items: center;
+}
+
+.tautulli-progress-container {
+	height: 2rem;
+	width: 100%;
+	max-width: 20rem;
+	border: 1px solid var(--color-progress-border);
+	border-radius: 4px;
+	margin-right: 1rem;
+	padding: 2px;
+}
+
+.tautulli-progress-bar {
+	height: 100%;
+	background: var(--color-primary);
+	border-radius: 3px;
+}
+
 @media (max-width: 1190px) {
     .header-container {
         display: none;
