feat: add fallback icon and image on rss feed items

--- a/internal/glance/static/main.css
+++ b/internal/glance/static/main.css
@@ -1726,6 +1726,11 @@ details[open] .summary::after {
     height: 8.7rem;
 }
 
+.fallback-icon-thumbnail {
+    margin: auto;
+    height: 100%;
+}
+
 .twitch-category-thumbnail {
     width: 5rem;
     aspect-ratio: 3 / 4;
