Fixed text truncate, req params and css

--- a/internal/glance/static/css/widgets.css
+++ b/internal/glance/static/css/widgets.css
@@ -6,6 +6,7 @@
 @import "widget-group.css";
 @import "widget-markets.css";
 @import "widget-monitor.css";
+@import "widget-qbittorrent.css";
 @import "widget-reddit.css";
 @import "widget-releases.css";
 @import "widget-rss.css";
