--- a/internal/glance/templates/bookmarks.html
+++ b/internal/glance/templates/bookmarks.html
@@ -1,6 +1,35 @@
 {{ template "widget-base.html" . }}
 
 {{ define "widget-content" }}
+{{ if eq .Style "cards" }}
+<div class="dynamic-columns list-gap-24">
+  {{ range .Groups }}
+  <div class="bookmarks-group"{{ if .Color }} style="--bookmarks-group-color: {{ .Color.String | safeCSS }}"{{ end }}>
+    {{ if ne .Title "" }}<div class="bookmarks-group-title size-h3 margin-bottom-10">{{ .Title }}</div>{{ end }}
+    <div class="cards-grid">
+      {{ range .Links }}
+      <a href="{{ .URL }}" {{ if .Target }}target="{{ .Target }}"{{ end }} rel="noreferrer" class="widget-content-frame padding-widget card flex flex-column items-center">
+        {{ if ne "" .Icon.URL }}
+        <div class="bookmarks-icon-container margin-bottom-5" style="padding: 0.8rem;">
+          <img src="{{ .Icon.URL }}" alt="" class="bookmarks-icon{{ if .Icon.IsFlatIcon }} flat-icon{{ end }}" style="width: 32px; height: 32px;">
+        </div>
+        {{ end }}
+        <h3 class="size-h3 color-primary text-center">{{ .Title }}</h3>
+        {{ if ne .Description "" }}
+        <p class="color-text-paragraph text-center text-truncate-2-lines margin-top-3">{{ .Description }}</p>
+        {{ end }}
+        {{ if ne .ButtonText "" }}
+        <div class="margin-top-auto text-center margin-top-7">
+          <span class="size-h4 color-primary">{{ .ButtonText }}</span>
+        </div>
+        {{ end }}
+      </a>
+      {{ end }}
+    </div>
+  </div>
+  {{ end }}
+</div>
+{{ else }}
 <div class="dynamic-columns list-gap-24 list-with-separator">
     {{- range .Groups }}
     <div class="bookmarks-group"{{ if .Color }} style="--bookmarks-group-color: {{ .Color.String | safeCSS }}"{{ end }}>
@@ -27,4 +56,5 @@
     </div>
     {{- end }}
 </div>
+{{ end }}
 {{ end }}
