--- a/internal/glance/templates/page-content.html
+++ b/internal/glance/templates/page-content.html
@@ -10,6 +10,14 @@
 </div>
 {{ end }}
 
+<div class="page-filter-bar">
+  <form id="filter-form" class="filter-form">
+    <textarea id="filter-input" name="filter" placeholder="Filter prompt...">{{ .Request.Filter }}</textarea>
+    <br />
+    <button type="submit">Apply</button>
+  </form>
+</div>
+
 <div class="page-columns">
 {{- range .Page.Columns }}
     <div class="page-column page-column-{{ .Size }}">
