--- a/internal/glance/templates/releases.html
+++ b/internal/glance/templates/releases.html
@@ -6,6 +6,9 @@
     <li>
         <div class="flex items-center gap-10">
             <a class="size-h4 block text-truncate color-primary-if-not-visited" href="{{ .NotesUrl }}" target="_blank" rel="noreferrer">{{ .Name }}</a>
+            {{ if .MatchScore }}
+            <span class="{{ matchScoreBadgeClass .MatchScore }}" title="This indicates how well this release matches your query.">{{ .MatchScore }}0%</span>
+            {{ end }}
             {{ if $.ShowSourceIcon }}
             <img class="flat-icon release-source-icon" src="{{ .SourceIconURL }}" alt="" loading="lazy">
             {{ end }}
@@ -17,6 +20,9 @@
             <li>{{ .Downvotes | formatNumber }} ⚠</li>
             {{ end }}
         </ul>
+        {{ if ne "" .Summary }}
+        <div class="forum-post-match-summary">{{ .Summary }}</div>
+        {{ end }}
     </li>
     {{ end }}
 </ul>
