--- a/internal/glance/templates/rss-horizontal-cards-2.html
+++ b/internal/glance/templates/rss-horizontal-cards-2.html
@@ -17,10 +17,16 @@
             {{ end }}
             <div class="rss-card-2-content padding-inline-widget">
                 <a href="{{ .Link }}" class="block text-truncate color-primary-if-not-visited" target="_blank" rel="noreferrer">{{ .Title }}</a>
+                {{ if .MatchScore }}
+                <span class="{{ matchScoreBadgeClass .MatchScore }}" title="This indicates how well this item matches your query.">{{ .MatchScore }}0%</span>
+                {{ end }}
                 <ul class="list-horizontal-text flex-nowrap margin-top-5">
                     <li class="shrink-0" {{ dynamicRelativeTimeAttrs .PublishedAt }}></li>
                     <li class="min-width-0 text-truncate">{{ .ChannelName }}</li>
                 </ul>
+                {{ if ne "" .Summary }}
+                <div class="forum-post-match-summary">{{ .Summary }}</div>
+                {{ end }}
             </div>
         </div>
         {{ end }}
