--- a/internal/glance/templates/rss-horizontal-cards.html
+++ b/internal/glance/templates/rss-horizontal-cards.html
@@ -17,10 +17,16 @@
             {{ end }}
             <div class="margin-bottom-widget padding-inline-widget flex flex-column grow">
                 <a href="{{ .Link }}" class="text-truncate-3-lines color-primary-if-not-visited margin-top-10 margin-bottom-auto" target="_blank" rel="noreferrer">{{ .Title }}</a>
+                {{ if .MatchScore }}
+                <span class="{{ matchScoreBadgeClass .MatchScore }}" title="This indicates how well this item matches your query.">{{ .MatchScore }}0%</span>
+                {{ end }}
                 <ul class="list-horizontal-text flex-nowrap margin-top-7">
                     <li class="shrink-0" {{ dynamicRelativeTimeAttrs .PublishedAt }}></li>
                     <li class="min-width-0 text-truncate">{{ .ChannelName }}</li>
                 </ul>
+                {{ if ne "" .Summary }}
+                <div class="forum-post-match-summary">{{ .Summary }}</div>
+                {{ end }}
             </div>
         </div>
         {{ end }}
