--- a/internal/glance/templates/rss-list.html
+++ b/internal/glance/templates/rss-list.html
@@ -5,12 +5,18 @@
     {{ range .Items }}
     <li>
         <a class="title size-title-dynamic color-primary-if-not-visited" href="{{ .Link }}" target="_blank" rel="noreferrer">{{ .Title }}</a>
+        {{ if .MatchScore }}
+        <span class="{{ matchScoreBadgeClass .MatchScore }}" title="This indicates how well this item matches your query.">{{ .MatchScore }}0%</span>
+        {{ end }}
         <ul class="list-horizontal-text flex-nowrap">
             <li {{ dynamicRelativeTimeAttrs .PublishedAt }}></li>
             <li class="min-width-0">
                 <a class="block text-truncate" href="{{ .ChannelURL }}" target="_blank" rel="noreferrer">{{ .ChannelName }}</a>
             </li>
         </ul>
+        {{ if ne "" .Summary }}
+        <div class="forum-post-match-summary">{{ .Summary }}</div>
+        {{ end }}
     </li>
     {{ else }}
     <li>{{ .NoItemsMessage }}</li>
